--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -96,6 +96,14 @@ Data 100 Resources – Suraj Rampure
 <td>13</td>
 <td><a href="../resources/ds100/fa19/disc13_slides.pdf">slides</a></td>
 </tr>
+<tr class="odd">
+<td>14</td>
+<td>N/A (Thanksgiving)</td>
+</tr>
+<tr class="even">
+<td>15</td>
+<td><a href="..resources/ds100/fa19/disc15_slides.pdf">slides</a>, <a href="../resources/ds100/fa19/disc15_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
