--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -110,6 +110,7 @@ Data 100 Resources – Suraj Rampure
 <p><strong>Review Slides:</strong></p>
 <ul>
 <li><a href="../resources/ds100/fa19/loss-and-risk-mt1.pdf">Loss and Risk Midterm 1 Review</a></li>
+<li><a href="../resources/ds100/fa19/classificationfa19.pdf">Logistic Regression, Classification, Evaluating Classifiers Final Review</a></li>
 </ul>
 <p><strong>Exam Walkthrough Videos:</strong></p>
 <ul>
