--- a/teaching/data8.html
+++ b/teaching/data8.html
@@ -27,7 +27,7 @@ Data 8 Resources – Suraj Rampure
 </head>
 <p><img src='../resources/pictures/miscircle.png' width=100></p>
 <h1 id="data-8-resources-suraj-rampure">Data 8 Resources – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a>   <a href="../courses/index.html">Courses</a></p>
+<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a></p>
 <hr />
 <h3 id="data-8-foundations-of-data-science-site">Data 8 – Foundations of Data Science (<a href="http://data8.org">site</a>)</h3>
 <p><strong>Discussion Slides (from Fall 2017):</strong></p>
