--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,7 +27,7 @@ Teaching – Suraj Rampure
 </head>
 <p><img src='../resources/pictures/miscircle.png' width=100></p>
 <h1 id="teaching-suraj-rampure">Teaching – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>   <a href="../courses/index.html">Courses</a></p>
+<p><a href="../index.html">Home</a>   <strong><a href="index.html">Teaching</a></strong>  </p>
 <hr />
 <p>Here’s a summary of my teaching history at Berkeley. Click one of the links to be navigated to one of my course specific pages.</p>
 <table>
@@ -40,36 +40,41 @@ Teaching – Suraj Rampure
 </thead>
 <tbody>
 <tr class="odd">
-<td>Fall 2019</td>
-<td>Data 100 (head TA)</td>
+<td>Spring 2020</td>
+<td>Data 100 (lead TA)</td>
 <td><a href="ds100.html">Data 100 Resources</a></td>
 </tr>
 <tr class="even">
+<td>Fall 2019</td>
+<td>Data 100 (head TA)</td>
+<td></td>
+</tr>
+<tr class="odd">
 <td>Summer 2019</td>
 <td>CS 70 (head TA), CS 375 (head TA)</td>
 <td></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Spring 2019</td>
 <td>Data 100 (head TA), IMT DeCal (instructor)</td>
 <td><a href="http://imt-decal.org">IMT DeCal Resources</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Fall 2018</td>
 <td>Data 100 (head TA), IMT DeCal (instructor)</td>
 <td></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Spring 2018</td>
 <td>CS 61A (TA), CS 70 (CSM mentor)</td>
 <td><a href="cs61a.html">CS 61A Resources</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Fall 2017</td>
 <td>Data 8 (TA), CS 70 (CSM mentor)</td>
 <td><a href="data8.html">Data 8 Resources</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Spring 2017</td>
 <td>Data 8 (course tutor), CS 70 (CSM mentor)</td>
 <td></td>
