--- a/teaching/cs61a.html
+++ b/teaching/cs61a.html
@@ -27,7 +27,7 @@ CS 61A Resources – Suraj Rampure
 </head>
 <p><img src='../resources/pictures/miscircle.png' width=100></p>
 <h1 id="cs-61a-resources-suraj-rampure">CS 61A Resources – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a>   <a href="../courses/index.html">Courses</a></p>
+<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a></p>
 <hr />
 <h3 id="cs-61a-structure-and-interpretation-of-computer-programs-site">CS 61A – Structure and Interpretation of Computer Programs (<a href="http://cs61a.org">site</a>)</h3>
 <p>In Spring 2018, I didn’t teach a discussion or lab for 61A. However, I created the following exam walkthrough videos:</p>
