--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -27,15 +27,40 @@ Data 100 Resources – Suraj Rampure
 </head>
 <p><img src='../resources/pictures/miscircle.png' width=100></p>
 <h1 id="data-100-resources-suraj-rampure">Data 100 Resources – Suraj Rampure</h1>
-<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a>   <a href="../courses/index.html">Courses</a></p>
+<p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a></p>
 <hr />
-<h2 id="fall-2019">Fall 2019</h2>
+<h2 id="spring-2020">Spring 2020</h2>
 <ul>
-<li><strong>Lab:</strong> Monday, 3-4PM, Evans B6 (118)</li>
-<li><strong>Disc:</strong> Wednesday, 3-4PM, Etcheverry 3107 (118A)</li>
-<li><strong>Office Hours:</strong> Tuesday, 2-3PM (Jacobs 220); Thursday 12-1PM (Evans 426)</li>
-<li><strong>Anonymous Feedback:</strong> Fill out <a href="https://forms.gle/DC3GAqTbV6u8w9nZ6">this form</a> to give me anonymous feedback on my teaching.</li>
+<li><strong>Labs:</strong> Tuesday 1-2PM in Evans B6, Tuesday 2-3PM in Evans B6</li>
+<li><strong>Discussions:</strong> Friday 12-1PM in Etcheverry 3111, Friday 1-2PM in Etcheverry 3119</li>
+<li><strong>Office Hours:</strong> Wednesday 3-5PM in Soda 341A</li>
+<li><strong>Anonymous Feedback:</strong> Fill out <a href="https://tinyurl.com/feedbacksuraj">this form</a> to give me anonymous feedback on my teaching.</li>
 </ul>
+<p><br></p>
+<p>Welcome to Data 100! If you’re in my discussions or labs, fill out <a href="https://tinyurl.com/welcometo100">this form</a> to tell me more about yourself.</p>
+<p><br></p>
+<table style="width:11%;">
+<colgroup>
+<col style="width: 5%" />
+<col style="width: 5%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>Week</th>
+<th>                                                                                                                                                                                   </th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td>coming soon</td>
+</tr>
+</tbody>
+</table>
+<p><br><br><br><br><br></p>
+<h2 id="archive-from-previous-semesters">Archive from Previous Semesters</h2>
+<p>Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under “Spring 2020”, so don’t worry about searching through this if you’re a current student.</p>
+<p><strong>Fall 2019 Discussion Resources:</strong></p>
 <table style="width:11%;">
 <colgroup>
 <col style="width: 5%" />
@@ -106,11 +131,13 @@ Data 100 Resources – Suraj Rampure
 </tr>
 </tbody>
 </table>
-<p><br></p>
-<p><strong>Review Slides:</strong></p>
+<p><strong>Spring 2019 Discussion Walkthrough Videos:</strong></p>
 <ul>
-<li><a href="../resources/ds100/fa19/loss-and-risk-mt1.pdf">Loss and Risk Midterm 1 Review</a></li>
-<li><a href="../resources/ds100/fa19/classificationfa19.pdf">Logistic Regression, Classification, Evaluating Classifiers Final Review</a></li>
+<li><a href="https://www.youtube.com/watch?v=Rigtuige5bU&amp;feature=youtu.be">Discussion 6 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=5-hsWWR3MXY&amp;feature=youtu.be">Discussion 7 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=MDtI9yYJfn0&amp;feature=youtu.be">Discussion 8 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=FRviVt0NNhE&amp;feature=youtu.be">Discussion 9 Walkthrough</a> (SP19)</li>
+<li><a href="https://www.youtube.com/watch?v=EfK_m1jCerM&amp;feature=youtu.be">Discussion 12 Walkthrough</a> (SP19)</li>
 </ul>
 <p><strong>Exam Walkthrough Videos:</strong></p>
 <ul>
@@ -122,26 +149,7 @@ Data 100 Resources – Suraj Rampure
 </ul>
 <p><strong>Lectures:</strong></p>
 <ul>
-<li>Lecture 20 (Logistic Regression, Cross Entropy Loss, Classification): <a href="https://docs.google.com/presentation/d/1HM3WU4a_lzYa5iz_S_XhsLC9NXy5y45h33Xm79_AStQ/edit?pli=1&amp;ts=5dc10004#slide=id.g4df0212f45_0_0">slides</a> <a href="https://www.youtube.com/watch?v=ky8ESSqw0Pc">webcast</a></li>
-</ul>
-<p><br><br><br><br><br></p>
-<h2 id="archive-from-previous-semesters">Archive from Previous Semesters</h2>
-<p>Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under “Fall 2019”, so don’t worry about searching through this if you’re a current student.</p>
-<p><strong>Discussion Resources:</strong></p>
-<ul>
-<li>Week 1: <a href="../resources/ds100/sp19/disc01_slides.pdf">slides</a>, <a href="../resources/ds100/sp19/disc01_markup.pdf">marked-up worksheet</a></li>
-<li>Week 3: <a href="../resources/ds100/sp19/disc03_markup.pdf">marked-up worksheet</a></li>
-<li>Week 5: <a href="../resources/ds100/sp19/disc05_markup.pdf">marked-up worksheet</a></li>
-<li>Week 6: <a href="../resources/ds100/sp19/disc06_slides.pdf">discussion slides</a>, <a href="../resources/ds100/sp19/disc06_markup.pdf">marked-up worksheet</a></li>
-<li>Week 10: <a href="../resources/ds100/sp19/disc10_notes.pdf">notes</a></li>
-</ul>
-<p><strong>Discussion Walkthrough Videos:</strong></p>
-<ul>
-<li><a href="https://www.youtube.com/watch?v=Rigtuige5bU&amp;feature=youtu.be">Discussion 6 Walkthrough</a> (SP19)</li>
-<li><a href="https://www.youtube.com/watch?v=5-hsWWR3MXY&amp;feature=youtu.be">Discussion 7 Walkthrough</a> (SP19)</li>
-<li><a href="https://www.youtube.com/watch?v=MDtI9yYJfn0&amp;feature=youtu.be">Discussion 8 Walkthrough</a> (SP19)</li>
-<li><a href="https://www.youtube.com/watch?v=FRviVt0NNhE&amp;feature=youtu.be">Discussion 9 Walkthrough</a> (SP19)</li>
-<li><a href="https://www.youtube.com/watch?v=EfK_m1jCerM&amp;feature=youtu.be">Discussion 12 Walkthrough</a> (SP19)</li>
+<li>Fall 2019 Lecture 20 (Logistic Regression, Cross Entropy Loss, Classification): <a href="https://docs.google.com/presentation/d/1HM3WU4a_lzYa5iz_S_XhsLC9NXy5y45h33Xm79_AStQ/edit?pli=1&amp;ts=5dc10004#slide=id.g4df0212f45_0_0">slides</a> <a href="https://www.youtube.com/watch?v=ky8ESSqw0Pc">webcast</a></li>
 </ul>
 <p><strong>Review Slides</strong>:</p>
 <ul>
@@ -149,6 +157,8 @@ Data 100 Resources – Suraj Rampure
 <li><a href="http://www.surajrampure.com/resources/ds100/final_review_regression.pdf">Final Review Slides (regression, BV, regularization)</a> (<a href="http://www.surajrampure.com/resources/ds100/final_review_exam_markup.pdf">exam mark-up</a>) (SP19)</li>
 <li><a href="http://www.surajrampure.com/resources/ds100/final_review_classification.pdf">Final Review Slides (classification, logistic regression)</a> (SP19)</li>
 <li><a href="http://www.surajrampure.com/resources/ds100/final_review_bootstrap_sampling.pdf">Final Review Slides (sampling, bootstrapping, confidence intervals)</a> (<a href="http://www.surajrampure.com/resources/ds100/final_review_bootstrap_notebook.html">notebook</a>) (<a href="http://www.surajrampure.com/resources/ds100/final_review_probability.pdf">worksheet</a>) (SP19)</li>
+<li><a href="../resources/ds100/fa19/loss-and-risk-mt1.pdf">Loss and Risk Midterm 1 Review</a> (FA19)</li>
+<li><a href="../resources/ds100/fa19/classificationfa19.pdf">Logistic Regression, Classification, Evaluating Classifiers Final Review</a> (FA19)</li>
 </ul>
 <p><strong>Other Notes</strong>:</p>
 <ul>
