--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -53,7 +53,7 @@ Data 100 Resources – Suraj Rampure
 <tbody>
 <tr class="odd">
 <td>1</td>
-<td>coming soon</td>
+<td><a href="../resources/ds100/sp20/disc1_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc1_markup.pdf">marked-up worksheet</a></td>
 </tr>
 </tbody>
 </table>
