--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -55,6 +55,10 @@ Data 100 Resources – Suraj Rampure
 <td>1</td>
 <td><a href="../resources/ds100/sp20/disc1_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc1_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="even">
+<td>2</td>
+<td><a href="../resources/ds100/sp20/disc2_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc2_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
