--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -59,6 +59,10 @@ Data 100 Resources – Suraj Rampure
 <td>2</td>
 <td><a href="../resources/ds100/sp20/disc2_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc2_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="odd">
+<td>3</td>
+<td><a href="../resources/ds100/sp20/disc3-joins-pandas.html">notebook on joins and pandas</a> (<a href="../resources/ds100/sp20/disc3-joins-pandas-raw.ipynb">raw</a>)</td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
