--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -39,10 +39,10 @@ Data 100 Resources – Suraj Rampure
 <p><br></p>
 <p>Welcome to Data 100! If you’re in my discussions or labs, fill out <a href="https://tinyurl.com/welcometo100">this form</a> to tell me more about yourself.</p>
 <p><br></p>
-<table style="width:11%;">
+<table>
 <colgroup>
-<col style="width: 5%" />
-<col style="width: 5%" />
+<col style="width: 50%" />
+<col style="width: 50%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -63,16 +63,24 @@ Data 100 Resources – Suraj Rampure
 <td>3</td>
 <td><a href="../resources/ds100/sp20/disc3-joins-pandas.html">notebook on joins and pandas</a> (<a href="../resources/ds100/sp20/disc3-joins-pandas-raw.ipynb">raw</a>)</td>
 </tr>
+<tr class="even">
+<td>4</td>
+<td>N/A (notebook only)</td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td><a href="../resources/ds100/sp20/disc5_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
 <h2 id="archive-from-previous-semesters">Archive from Previous Semesters</h2>
 <p>Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under “Spring 2020”, so don’t worry about searching through this if you’re a current student.</p>
 <p><strong>Fall 2019 Discussion Resources:</strong></p>
-<table style="width:11%;">
+<table>
 <colgroup>
-<col style="width: 5%" />
-<col style="width: 5%" />
+<col style="width: 50%" />
+<col style="width: 50%" />
 </colgroup>
 <thead>
 <tr class="header">
