--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -71,6 +71,10 @@ Data 100 Resources – Suraj Rampure
 <td>5</td>
 <td><a href="../resources/ds100/sp20/disc5_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="even">
+<td>6</td>
+<td><a href="../resources/ds100/sp20/disc6_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc6_markup.pdf">marked-up worksheet</a>, <a href="../resources/ds100/sp20/disc6-raw.html">demo</a></td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
