--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -75,6 +75,10 @@ Data 100 Resources – Suraj Rampure
 <td>6</td>
 <td><a href="../resources/ds100/sp20/disc6_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc6_markup.pdf">marked-up worksheet</a>, <a href="../resources/ds100/sp20/disc6-raw.html">demo</a></td>
 </tr>
+<tr class="odd">
+<td>7</td>
+<td><a href="../resources/ds100/sp20/disc7_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc7_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
