--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -30,14 +30,8 @@ Data 100 Resources – Suraj Rampure
 <p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a></p>
 <hr />
 <h2 id="spring-2020">Spring 2020</h2>
-<ul>
-<li><strong>Labs:</strong> Tuesday 1-2PM in Evans B6, Tuesday 2-3PM in Evans B6</li>
-<li><strong>Discussions:</strong> Friday 12-1PM in Etcheverry 3111, Friday 1-2PM in Etcheverry 3119</li>
-<li><strong>Office Hours:</strong> Wednesday 3-5PM in Soda 341A</li>
-<li><strong>Anonymous Feedback:</strong> Fill out <a href="https://tinyurl.com/feedbacksuraj">this form</a> to give me anonymous feedback on my teaching.</li>
-</ul>
-<p><br></p>
-<p>Welcome to Data 100! If you’re in my discussions or labs, fill out <a href="https://tinyurl.com/welcometo100">this form</a> to tell me more about yourself.</p>
+<p><strong>Update:</strong> I’m still currently working out a permanent schedule for discussion and office hours given the new switch to online classes. However, everything I host will be at my Zoom link, <a href="http://berkeley.zoom.us/my/surajrampure">berkeley.zoom.us/my/surajrampure</a>. If you want to set up a 1-on-1 appointment, just email me! (<code>suraj.rampure@berkeley.edu</code>)</p>
+<p><strong>Anonymous Feedback:</strong> Fill out <a href="https://tinyurl.com/feedbacksuraj">this form</a> to give me anonymous feedback on my teaching.</p>
 <p><br></p>
 <table>
 <colgroup>
@@ -78,6 +72,10 @@ Data 100 Resources – Suraj Rampure
 <tr class="odd">
 <td>7</td>
 <td><a href="../resources/ds100/sp20/disc7_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc7_markup.pdf">marked-up worksheet</a></td>
+</tr>
+<tr class="even">
+<td>8</td>
+<td><a href="../resources/ds100/sp20/disc8_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc8_markup.pdf">marked-up worksheet</a></td>
 </tr>
 </tbody>
 </table>
