--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -30,7 +30,7 @@ Data 100 Resources – Suraj Rampure
 <p><a href="../index.html">Home</a>   <a href="index.html">Teaching</a></p>
 <hr />
 <h2 id="spring-2020">Spring 2020</h2>
-<p><strong>Update:</strong> I’m still currently working out a permanent schedule for discussion and office hours given the new switch to online classes. However, everything I host will be at my Zoom link, <a href="http://berkeley.zoom.us/my/surajrampure">berkeley.zoom.us/my/surajrampure</a>. If you want to set up a 1-on-1 appointment, just email me! (<code>suraj.rampure@berkeley.edu</code>)</p>
+<p><strong>Update:</strong> I’m still currently working out a permanent schedule for discussion and office hours given the new switch to online classes. However, everything I host will be on Zoom. If you want to set up a 1-on-1 appointment, just email me! (<code>suraj.rampure@berkeley.edu</code>)</p>
 <p><strong>Anonymous Feedback:</strong> Fill out <a href="https://tinyurl.com/feedbacksuraj">this form</a> to give me anonymous feedback on my teaching.</p>
 <p><br></p>
 <table>
