--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -77,6 +77,10 @@ Data 100 Resources – Suraj Rampure
 <td>8</td>
 <td><a href="../resources/ds100/sp20/disc8_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc8_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="odd">
+<td>10</td>
+<td><a href="../resources/ds100/sp20/disc10_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc10_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
