--- a/teaching/ds100.html
+++ b/teaching/ds100.html
@@ -81,6 +81,10 @@ Data 100 Resources – Suraj Rampure
 <td>10</td>
 <td><a href="../resources/ds100/sp20/disc10_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc10_markup.pdf">marked-up worksheet</a></td>
 </tr>
+<tr class="even">
+<td>13</td>
+<td><a href="../resources/ds100/sp20/disc13_slides.pdf">slides</a>, <a href="../resources/ds100/sp20/disc13_markup.pdf">marked-up worksheet</a></td>
+</tr>
 </tbody>
 </table>
 <p><br><br><br><br><br></p>
